// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Routing Should display the detail page when a repository item is clicked and go back the search page when "Back to search" is clicked 1`] = `
<div
  class="repository-detail"
  data-testid="repository-detail"
>
  <h2>
    Repository Detail
  </h2>
  <div
    class="repository-detail__body"
  >
    <button
      data-testid="back-to-search"
      type="button"
    >
      Back to search
    </button>
    <div
      class="repository"
    >
      <div
        class="repository-field"
      >
        <h3
          class="repository-field__label"
        >
          Name
        </h3>
        <div
          class="repository-field__text"
        >
          Tetrio-Rank-Predictor
        </div>
      </div>
      <div
        class="repository-field"
      >
        <h3
          class="repository-field__label"
        >
          Description
        </h3>
        <div
          class="repository-field__text"
        >
          Provides an approximate rank for Tetr.io's Tetra League based on APM, PPS, and VS-Score.
        </div>
      </div>
      <div
        class="repository-field"
      >
        <h3
          class="repository-field__label"
        >
          Language
        </h3>
        <div
          class="repository-field__text"
        >
          Python
        </div>
      </div>
      <div
        class="repository-field"
      >
        <h3
          class="repository-field__label"
        >
          Stars
        </h3>
        <div
          class="repository-field__text"
        >
          0
        </div>
      </div>
      <div
        class="repository-field"
      >
        <h3
          class="repository-field__label"
        >
          Owner
        </h3>
        <div
          class="repository-field__text"
        >
          chunkanglu
        </div>
      </div>
    </div>
    <a
      class="repository-detail__link"
      href="https://github.com/chunkanglu/Tetrio-Rank-Predictor"
      target="__blank"
    >
      Go to the repository
    </a>
  </div>
</div>
`;

exports[`App Routing Should display the detail page when a repository item is clicked and go back the search page when "Back to search" is clicked 2`] = `
<div
  class="github-search"
  data-testid="search-page"
>
  <h2>
    GitHub Repository Search
  </h2>
  <div
    class="github-search__toolbar"
  >
    <div
      class="github-search__sortby"
      data-testid="sortby-field"
    >
      <label
        for="sortby"
      >
        Sort by:
      </label>
      <select
        data-testid="sortby-list"
        name="sortby"
      >
        <option
          value=""
        >
          Best match
        </option>
        <option
          value="stars"
        >
          Stars
        </option>
      </select>
    </div>
    <div
      class="github-search__language"
      data-testid="search-language"
    >
      <label
        for="language"
      >
        Language:
      </label>
      <select
        data-testid="language-list"
        name="language"
      >
        <option
          value="c"
        >
          C
        </option>
        <option
          value="c#"
        >
          C#
        </option>
        <option
          value="java"
        >
          Java
        </option>
        <option
          value="javascript"
        >
          JavaScript
        </option>
        <option
          value="php"
        >
          PhP
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="ruby"
        >
          Ruby
        </option>
        <option
          value="shell"
        >
          Shell
        </option>
        <option
          value="typescript"
        >
          TypeScript
        </option>
      </select>
    </div>
  </div>
  <div
    class="github-search__sticky-header"
  >
    <input
      class="github-search__keyword"
      data-testid="search-field"
      type="text"
      value=""
    />
    <div
      class="github-search__count"
    >
      <span>
        Total: 40
      </span>
      <span>
        30/page
      </span>
    </div>
  </div>
  <div
    class="github-search-result"
    data-testid="search-result"
  >
    <div
      class="github-search-result__list"
    >
      <a
        class="detail-link"
        href="/detail"
      >
        <div
          class="repository"
          data-testid="repository-item"
        >
          <div
            class="repository-name"
          >
            <span
              class="repository-name__label"
            >
              Name:
            </span>
            <div
              class="repository-name__text"
            >
              Tetrio-Rank-Predictor
            </div>
          </div>
          <div
            class="repository-description"
          >
            <span
              class="repository-description__label"
            >
              Description:
            </span>
            <div
              class="repository-description__text"
            >
              Provides an approximate rank for Tetr.io's Tetra League based on APM, PPS, and VS-Score.
            </div>
          </div>
        </div>
      </a>
      <a
        class="detail-link"
        href="/detail"
      >
        <div
          class="repository"
          data-testid="repository-item"
        >
          <div
            class="repository-name"
          >
            <span
              class="repository-name__label"
            >
              Name:
            </span>
            <div
              class="repository-name__text"
            >
              Cooperative-Protein-Dynamics
            </div>
          </div>
          <div
            class="repository-description"
          >
            <span
              class="repository-description__label"
            >
              Description:
            </span>
            <div
              class="repository-description__text"
            >
              This is a simple program that maps the dynamics between LacI and TetR in a one of the first toggle switch systems created by Gardner et al (2000)
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    class="github-search__sticky-footer"
  >
    <div
      class="pagination"
      data-testid="pagination"
    >
      <button
        class="pagination-left"
        data-testid="pagination-left"
        disabled=""
      >
        &lt;
      </button>
      <button
        class="pagination-page pagination-page--active"
      >
        1
      </button>
      <button
        class="pagination-page"
      >
        2
      </button>
      <button
        class="pagination-right"
        data-testid="pagination-right"
        disabled=""
      >
        &gt;
      </button>
    </div>
  </div>
</div>
`;

exports[`App Should render error message for a failed search 1`] = `
<div>
  Trouble search GitHub: 500
</div>
`;

exports[`App Should render the basic snapshot view 1`] = `
<div
  class="github-search"
  data-testid="search-page"
>
  <h2>
    GitHub Repository Search
  </h2>
  <div
    class="github-search__toolbar"
  >
    <div
      class="github-search__sortby"
      data-testid="sortby-field"
    >
      <label
        for="sortby"
      >
        Sort by:
      </label>
      <select
        data-testid="sortby-list"
        name="sortby"
      >
        <option
          value=""
        >
          Best match
        </option>
        <option
          value="stars"
        >
          Stars
        </option>
      </select>
    </div>
    <div
      class="github-search__language"
      data-testid="search-language"
    >
      <label
        for="language"
      >
        Language:
      </label>
      <select
        data-testid="language-list"
        name="language"
      >
        <option
          value="c"
        >
          C
        </option>
        <option
          value="c#"
        >
          C#
        </option>
        <option
          value="java"
        >
          Java
        </option>
        <option
          value="javascript"
        >
          JavaScript
        </option>
        <option
          value="php"
        >
          PhP
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="ruby"
        >
          Ruby
        </option>
        <option
          value="shell"
        >
          Shell
        </option>
        <option
          value="typescript"
        >
          TypeScript
        </option>
      </select>
    </div>
  </div>
  <div
    class="github-search__sticky-header"
  >
    <input
      class="github-search__keyword"
      data-testid="search-field"
      type="text"
      value=""
    />
    <div
      class="github-search__count"
    >
      <span>
        Total: 0
      </span>
      <span>
        30/page
      </span>
    </div>
  </div>
  <div
    class="github-search-result"
    data-testid="search-result"
  >
    <div>
      Please enter a keyword!
    </div>
  </div>
  <div
    class="github-search__sticky-footer"
  >
    <div
      class="pagination"
      data-testid="pagination"
    >
      <button
        class="pagination-left"
        data-testid="pagination-left"
        disabled=""
      >
        &lt;
      </button>
      <button
        class="pagination-right"
        data-testid="pagination-right"
        disabled=""
      >
        &gt;
      </button>
    </div>
  </div>
</div>
`;
